# selective-pruning

./: README.md  pyproject.toml
exp1-is-effective/: prune-llms.sh  prune-vit.sh
exp2-ff-attn-scoring/: prune.py  scoring-functions.sh
exp3-toxicity/: prune_civil.sh
exp4-comparison/: RUN_CIFAR100_EXPERIMENTS.sh  cifar_classes.py  forget_full_class_main.py  forget_full_class_strategies.py  metrics.py  models.py  my_datasets.py  sp.py  ssd.py  unlearn.py  utils.py
simple-examples/: simple_prune.py
