[tool.poetry]
name = "selective-pruning"
version = "0.1.0"
description = ""
authors = ["Nicky Pochinkov <work@nicky.pro>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.9,<=3.13"
taker = "1.0.1"
torchvision = "^0.18.1"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
